--- a/my-project/package.json
+++ b/my-project/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "webpack --config webpack.prod.js",
     "watch": "webpack --watch",
     "dev": "webpack serve --open"
   },
@@ -21,6 +21,7 @@
     "file-loader": "^6.2.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style-loader": "^3.0.0",
